# polars-geocode

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
polars_geocode/: GeoLite2-City.mmdb  __init__.py
src/: lib.rs  polars_geocode_mod.rs
tests/: test.py
