[package]
name = "polars_geocode"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polars_geocode"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
maxminddb = "0.23.0"
polars = { version = "0.30.0", features = ["fmt", "dtype-struct"] }
polars-core = "0.30.0"
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = "0.4.0"
rayon = "1.7.0"
