[project]
name = "polars-geocode"
version = "0.2.0"
description = ""
authors = [
    { name = "Andrey Tatarinov", email = "<a@tatarinov.co>" }
]
dependencies = [
    "polars[pyarrow]"
]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
module-name = "polars_geocode._polars_geocode"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
